--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.2",
     "googleapis": "^139.0.0",
     "helmet": "^7.1.0",
     "https": "^1.0.0",
